WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134181
[iOS][wk2] Swiping back sometimes results in a missing (not blank) swipe snapshot
https://bugs.webkit.org/show_bug.cgi?id=134181
Summary
[iOS][wk2] Swiping back sometimes results in a missing (not blank) swipe snap...
Tim Horton
Reported
2014-06-22 18:14:12 PDT
In
r170036
, I made it so that setRenderTreeSize would remove the snapshot even if m_snapshotRemovalTargetRenderTreeSize wasn't set, so that we would still wait until the first relevant layer tree commit to remove the snapshot. However, this also removed the only guard that ensured that we only removed the snapshot after the swipe was complete; now, any layer tree commit that comes in *during* the swipe will cause the snapshot to be removed. Oops! Let's make the old behavior more explicit.
Attachments
patch
(3.38 KB, patch)
2014-06-22 18:17 PDT
,
Tim Horton
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-06-22 18:17:13 PDT
Created
attachment 233581
[details]
patch
Radar WebKit Bug Importer
Comment 2
2014-06-22 18:19:57 PDT
<
rdar://problem/17413411
>
Benjamin Poulain
Comment 3
2014-06-22 18:23:36 PDT
Comment on
attachment 233581
[details]
patch Thanks! :)
Tim Horton
Comment 4
2014-06-22 18:32:38 PDT
http://trac.webkit.org/changeset/170277
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug