[iOS][wk2] Swiping back sometimes results in a missing (not blank) swipe snapshot https://bugs.webkit.org/show_bug.cgi?id=134181

Reviewed by Benjamin Poulain.

* UIProcess/ios/ViewGestureControllerIOS.mm:
(WebKit::ViewGestureController::ViewGestureController):
(WebKit::ViewGestureController::endSwipeGesture):
(WebKit::ViewGestureController::setRenderTreeSize):
(WebKit::ViewGestureController::removeSwipeSnapshot):
* UIProcess/mac/ViewGestureController.h:
Make it explicit that we should only remove the swipe snapshot when a
big-enough render tree size arrives *after the swipe ends*.


Canonical link: https://commits.webkit.org/152137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170277 268f45cc-cd09-0410-ab3c-d52691b4dbfc